--- a/css/demo.css
+++ b/css/demo.css
@@ -41,12 +41,17 @@ hr {
   border-top: 1px solid #ccc;
 }
 
+.row {
+  margin-bottom: 24px;
+}
+
 .grid-example {
   background: tomato;
   color: white;
   height: 80px;
   line-height: 80px;
-  margin-bottom: 24px;
+  margin-top: 12px;
+  margin-bottom: 12px;
   text-align: center;
   padding: 0 5px;
   white-space: nowrap;
@@ -78,7 +83,7 @@ a:hover {
 .btn, .btn-ghost, .nav a {
   display: inline-block;
   padding: 10px 20px;
-  border-radius: 2px;
+  border-radius: 4px;
   background: dodgerblue;
   color: #fff !important;
   text-decoration: none;
