--- a/src/demo.scss
+++ b/src/demo.scss
@@ -46,19 +46,22 @@ hr {
 	border-top: 1px solid #ccc;
 }
 
+.row {
+  margin-bottom: 24px;
+}
 
 .grid-example {
   background: tomato;
   color: white;
   height: 80px;
   line-height: 80px;
-  margin-bottom: 24px;
+  margin-top: 12px;
+  margin-bottom: 12px;
   text-align: center;
   padding: 0 5px;
 
   white-space: nowrap;
   overflow: hidden;
-  // width: 100%;
   text-overflow: ellipsis;
 
   .row .row & {
@@ -91,7 +94,7 @@ a {
 .btn {
     display: inline-block;
     padding: 10px 20px;
-    border-radius: 2px;
+    border-radius: 4px;
     background: dodgerblue;
     color: #fff !important;
     text-decoration: none;
